--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://postgres:darsh123@localhost:5432/bloodnet
+DATABASE_URL=postgresql://postgres:basava@123@localhost:5432/bloodnet
 SESSION_SECRET=local-development-secret
 
