--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_GOOGLE_MAPS_API_KEY=AIzaSyCV7X_hl_NVx5hWcCNGDsa5Adsp8tSetGw
+#VITE_GOOGLE_MAPS_API_KEY=AIzaSyCV7X_hl_NVx5hWcCNGDsa5Adsp8tSetGw
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyDD4q-la2gkXvCP5qXsKZLAB-rGrUUcBkg#basava
